--- a/README
+++ b/README
@@ -1,15 +1,19 @@
-SlideExtract
+slideextract
 ============
 
-SlideExtract is a simple program to extract slides from videos.
-It outputs an image for each slide. Slide detection is done by comparing each
-frame with the previous one. For better results and speed it is recommended
-to specify a region that should be compared. Best results are usually achived
-when selecting the slide number (since that only changes with every slide).
+slideextract is a program to extract slides from videos.
+It outputs an image for each detected slide. Slide detection is done by
+comparing consecutive frames for differences within a specific threshold,
+to account for video encoding artifacts.
+
+For better results and faster extraction you should specify a comparison
+region, such as the slide number. From a series of unchanging comparison
+regions slideextract will pick the last frame in hopes of capturing the
+final state of the entire slide (animated bullet points, etc...).
 
 Once extraction is completed you can view the extracted slides with your
-favorite image viewer and delete possible duplicates (this usually happens
-when the video jumps back and forth between slides).
+favorite image viewer and delete possible duplicates. This often happens
+when the video jumps back and forth between slides.
 
 You can then combine the slides to a pdf with a tool like convert:
 
@@ -17,13 +21,13 @@ You can then combine the slides to a pdf with a tool like convert:
 
 
 Dependencies
-============
+------------
 
 * opencv 2.x
 
 
 Build Instructions
-==================
+------------------
 
     ./configure
     make
@@ -31,7 +35,7 @@ Build Instructions
 
 
 License
-=======
+-------
 
 BSD 2-Clause license, see the COPYING file for more details.
 
