--- a/README
+++ b/README
@@ -36,5 +36,5 @@ Build Instructions
 License
 -------
 
-BSD 2-Clause license, see the COPYING file for more details.
+BSD 2-Clause license, see LICENSE for more details.
 
