Fix docs for `-r` option and BREAK API!
The docs for `-r` suggested passing two points, the implementation
however always required a point and width & height.

Modify the docs to represent the actual workings of point and
width & height.

Break the API to make this change blatantly apparent.

New API is: X.Y:WxH
Old API suggested it was X1.Y1:X2.Y2 while actually being X.Y:W.H

To free up the possibility of adding back two points for region of
interest setting and consistency with other CLI tools change the
notation to X.Y:WxH.

--- a/slideextract.1
+++ b/slideextract.1
@@ -7,7 +7,7 @@
 .Sh SYNOPSIS
 .Nm
 .Op Fl g
-.Op Fl r Ar x1.y1:x2.y2
+.Op Fl r Ar X.Y:WxH
 .Ar file
 .Ar prefix
 .Sh DESCRIPTION
@@ -16,9 +16,11 @@ Output one image for each slide detected within the video file.
 .It Fl g
 Launch graphical user interface to set comparison region; press any key to
 start extraction and print selected region.
-.It Fl r Ar x1.y1:x2.y2
-Manually set comparison region to
-.Ar x1.y1:x2.y2 .
+.It Fl r Ar X.Y:WxH
+Manually set comparison region by specifying a starting point
+.Ar X.Y
+and width & height
+.Ar WxH .
 .It Ar file
 Read from video
 .Ar file .
